--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
+.h1-heading {
+  display: none;
+}
 .aaa {
   width: 500px;
   margin: 0 auto;
@@ -60,8 +63,7 @@ button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+h3 {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -87,7 +89,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+.new-task {
   display: block;
   margin: 0 0 20px;
 }
