--- a/style.css
+++ b/style.css
@@ -1,56 +1,60 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
-.h1-heading {
+.article__title--h1 {
   display: none;
 }
-.aaa {
+.article {
   width: 500px;
-  margin: 0 auto;
   display: block;
+  margin: 0 auto;
   text-align: right;
 }
-.aaa img {
-  width: 100%;
+.article__img {
+    width: 100%;
 }
-.aaa .more_inf {
+.article__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa { 
+  .article { 
     text-align: center;
   }
 }
-.centered-main-page-element {
-  display: block;
-  width: 500px;
+.article--centered {
+  text-align: left;
   margin: 0 auto 0;
 }
-.task {
+.article__input,
+.list__item-label,
+.list__item-text {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.article__wrapper {
   display: flex;
 }
-ul {
+
+.list {
   margin: 0;
   padding: 0px;
 }
-li,
-h3 {
+.list__item,
+.article__title {
   list-style: none;
+  margin: 0;
 }
+/* оставлен селектор тегов, т.к.это сброс дефолтных стилей, в таком случае селектор тегов допустим*/
 input,
 button{
   outline: none;
 }
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -59,11 +63,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.btn:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3 {
+.article__title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -72,7 +76,8 @@ h3 {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.article__input,
+.list__item-text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -84,21 +89,38 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.article__input:focus,
+.list__item-text:focus {
   color: #333;
 }
 
 /* New Task */
-.new-task {
+.article__title--new-task {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
-  width: 318px;
+.list__item-new-task {
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1;
+
+  margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #ddd;
+  background: #fff;
+  border-radius: 6px;
+  font-family: Lato, sans-serif;
+  color: #888;
+}
+.list__item-new-task:focus {
+  color: #333;
 }
 
 /* Task list */
-li {
+.list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -107,47 +129,47 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.list__item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.list__item-checkbox {
   margin: 0 10px;
 }
-li > label {
+.list__item-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.list__item-text {
   width: 226px
 }
-button.delete img {
+.list__item-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.list__item-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.list--completed .list__item-label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.list .list__item-text {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+.list__item--edit-mode .list__item-text {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.list__item--edit-mode .list__item-label {
   display: none;
 }
